--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -66,19 +66,22 @@ jobs:
       - name: Install dependencies on Windows
         if: startsWith(matrix.config.os, 'windows')
         run: |
+          choco install ninja
+          ninja --version
           cmake --version
 
       - name: Install dependencies on Ubuntu
         if: startsWith(matrix.config.name, 'Ubuntu')
         run: |
           sudo apt update
-          sudo apt install -y libepoxy-dev
+          sudo apt install -y libepoxy-dev ninja-build
           cmake --version
           gcc --version
 
       - name: Install dependencies on MacOS
         if: startsWith(matrix.config.os, 'macos')
         run: |
+          brew install p7zip ninja
           cmake --version
           clang --version
 
