--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,8 +41,8 @@ jobs:
             cc: "gcc",
             cxx: "g++",
             generators: "Ninja",
-            archiver: "7z a",
-            artifact: "ubuntu_gcc.7z"
+            archiver: "tar czf",
+            artifact: "ubuntu_gcc.tar.gz"
           }
 #
 #         MacOS disabled because I have no idea where GL/gl.h is.
