--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1194,7 +1194,7 @@ endif()
 
 # Win32 specifics
 if (WIN32)
-  list(APPEND LIBRARIES winmm imm32 wsock32)
+  list(APPEND LIBRARIES winmm imm32 wsock32 gdi32)
 endif()
 
 if(MSVC)
