Add msimg32 to the win32 library list

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1194,7 +1194,7 @@ endif()
 
 # Win32 specifics
 if (WIN32)
-  list(APPEND LIBRARIES gdi32 winmm imm32 wsock32)
+  list(APPEND LIBRARIES msimg32 winmm imm32 wsock32)
 endif()
 
 if(MSVC)
