--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,7 @@ add_subdirectory(adie)
 add_subdirectory(calculator)
 add_subdirectory(chart)
 add_subdirectory(controlpanel)
-# glviewer currently broken, need better CMake gl tests
-#add_subdirectory(glviewer)
+add_subdirectory(glviewer)
 add_subdirectory(pathfinder)
 add_subdirectory(shutterbug)
 add_subdirectory(tests)
