Try building a shared library

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -826,9 +826,7 @@ winmaximize.gif
 winminimize.gif
 winrestore.gif)
 
-# Building a shared library on Windows requires GL libraries
-#add_library(FOX SHARED ${SOURCES})
-add_library(FOX ${SOURCES})
+add_library(FOX SHARED ${SOURCES})
 
 find_package(PkgConfig)
 find_package(Threads)
